[Fix Author in Books + test AuthorController]